# clapi

./: .editorconfig  .gitignore  clapi.cc  cmd_arg_parse.hh  cmd_line_parse.cc  meson.build  meson.options
include/clapi/: api_error.hh  diagnostics.hh
include/clapi/deduced/: api_signature.hh  error_returns.hh  function_pointer.hh
include/clapi/etc/: basic.hh  compiler.hh  deduced_sfinae.hh  given.hh  param_optimization.hh  premise.hh  seq.hh  type_constants.hh
include/clapi/transforms/: error_returns.hh  skip_last_param.hh
include/fwd/clapi/etc/: basic.hh  seq.hh  type_constants.hh
qa/: deduced_asserts.cc  fun_ptr_asserts.cc  meson.build  update-hdrs-sanity.sh
qa/headers-work/clapi/: api_error.cc  diagnostics.cc
qa/headers-work/clapi/deduced/: api_signature.cc  error_returns.cc  function_pointer.cc
qa/headers-work/clapi/etc/: basic.cc  compiler.cc  deduced_sfinae.cc  given.cc  param_optimization.cc  premise.cc  seq.cc  type_constants.cc
qa/headers-work/clapi/transforms/: error_returns.cc  skip_last_param.cc
qa/headers-work/fwd/clapi/etc/: basic.cc  seq.cc  type_constants.cc
